name: bg-ranjith
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
#license: BSD3
#license-file: LICENSE
#copyright: 2017 Author name here
maintainer: ranjith.raj2035@gmail.com
homepage: https://github.com/vranjithreddy/Blue-Green-Deploy.git
category: Web
author: Ranjith
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/vranjithreddy/Blue-Green-Deploy.git

library
    exposed-modules:
        Lib
        Command
        Docker
        Cli
    build-depends:
        base >=4.7 && <5,
        process -any,
        split -any,
        either -any,
        directory -any,
        mtl -any,
        HTTP -any,
        getflag -any,
        optparse-applicative -any
    default-language: Haskell2010
    hs-source-dirs: src

executable bg-ranjith-exe
    main-is: Main.hs
    build-depends:
        base -any,
        bg-ranjith -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite bg-ranjith-test
    type: exitcoeasy-deplde-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        bg-ranjith -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
